--- a/Base code/requirements.txt
+++ b/Base code/requirements.txt
@@ -97,6 +97,7 @@ packaging==25.0
 pandas==2.3.1
 pandocfilters==1.5.1
 parso==0.8.4
+patsy==1.0.2
 pexpect==4.9.0
 pillow==11.3.0
 platformdirs==4.3.8
@@ -123,13 +124,16 @@ rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rpds-py==0.27.0
 scikit-learn==1.7.1
+scikit-posthocs==0.11.4
 scipy==1.15.3
 seaborn==0.13.2
 Send2Trash==1.8.3
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 stack-data==0.6.3
+statsmodels==0.14.6
 sympy==1.14.0
 terminado==0.18.1
 threadpoolctl==3.6.0
